--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "should": "^13.2.3",
