--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Andela Bootcamp Project By Aniebiet",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --exit",
-    "start": "nodemon server.js"
+    "test": "nyc mocha --exit",
+    "start": "nodemon server.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.9",
+    "nyc": "^13.1.0",
     "request": "^2.88.0",
     "should": "^13.2.3",
     "supertest": "^3.4.2"
